Fixed css alignment, back button for pastorder, button to return to cart after error for input table

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ div.tab-content {
 }
 
 div.container {
-  padding: 0px 10px 0px 5px;
+  padding: 0px 5px 0px 5px;
 }
 
 .success-Btn {
@@ -41,6 +41,7 @@ div.container {
 
 .main-Container {
   margin-top: 20%;
+  
 }
 
 .q-logo {
